export interface Artist {
  id: string;
  name: string;
  genres: Array<string>;
  tags: Array<string>;
  songs: Array<string>;
  albums: Array<string>;
}
